# Mini-SoC-Simulator

./: .gitignore  CMakeLists.txt  EXAMPLE_OUTPUT.md  EXECUTION_FLOW.md  README.md  TESTING.md  vcpkg.json
src/: top.cpp
src/bus/: simple_bus.h
src/cpu/: cpu_initiator.h
src/memory/: ram_target.h  rom_target.h
src/peripheral/: gpio_peripheral.h  timer_peripheral.h
tests/: test_main.cpp
